--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,10 +19,21 @@ body {
   line-height: 24px;
   color:#000;
   background-color: #fff;
+
 }
 .page-header {
   color:#000 ;
   background: #fff;
+
+  }
+  .navigation {   background: #fff;
+    display: flex;
+  width: 760;
+margin:0 auto;}
+}
+.navigation-list {
+  display: flex;
+
 }
 .navigation-link {
   font-family: "PT Sans"sans-serif;
@@ -35,8 +46,9 @@ body {
   text-decoration:none;
   text-align: center;
   background-color:#fff;
-
 }
+.container {margin: 0 auto;
+width: 1200px;}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -47,17 +59,31 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-  .index-main {
-  background-image: url("../images/index/mountains.jpg");
-  background-size:100% auto;
-  background-repeat: no-repeat;
-  color:  #000;
-  background-color: var(--basic-white, #FFF);;
+  .index-main {  background-image: url("../images/index/mountains.jpg");
+    background-size:100% auto;
+    background-repeat: no-repeat;
+    color:  #000;
+    background-color: var(--basic-white, #FFF);
+
+
   }
   .index-main-image{
-    display: block;
+display: block;
     margin: 0 auto;
+    padding-top: 51.4px;
   }
+.heading {display:inline-block;
+  padding-top: 200px;
+}
+.advantages-list {
+  display: flex;
+
+  width: 1300px;
+
+  flex-wrap: wrap;
+
+}
+
   .heading-text{
     font-family: PT Sans;
 font-size: 30px;
@@ -66,6 +92,7 @@ font-weight: 700;
 line-height: 36px; /* 120% */
 text-transform: uppercase;
 text-align: center;
+
 color:#333;
   }
   .heading-text-item{
@@ -76,22 +103,43 @@ font-style: normal;
 font-weight: 400;
 line-height: 26px;
 text-transform: none;}
-.advantages-item{
+
+.advantages-item {
+display: flex;
   background-color:#82B3D3;
 width: 400px;
 height: 385px;
-padding: 103px 85px;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap: 10px;
 color: #FFFFFF;
+
 }
+.advantages1 {font-family: PT Sans;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: 28px; /* 116.667% */
+text-transform: uppercase;
+}
+.description-item {font-family: PT Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 116.667% */
+  color: var(--texts-background-deafault, #FFF);
+  text-align: center;
+  }
 .advantages-item-2 {
+  width: 800px;
+  height: 385px;
+  align-self: stretch;
+
+}
+.advantages-item-3 {
   display: flex;
 width: 400px;
 height: 385px;
-padding: 103px 85px;
 flex-direction: column;
 justify-content: center;
 align-items: center;
@@ -99,11 +147,11 @@ gap: 10px;
 flex-shrink: 0;
 background-color: #83B3D31F;
 }
-.advantages-item-3 {
+.advantages-item-4 {
 display: flex;
 width: 400px;
 height: 385px;
-padding: 103px 85px;
+
 flex-direction: column;
 justify-content: center;
 align-items: center;
@@ -111,30 +159,34 @@ gap: 10px;
 flex-shrink: 0;
 background-color: #83B3D333;
 }
-.advantages-item-4 {
+.advantages-item-5 {
   display: flex;
   width: 400px;
   height: 385px;
-  padding: 103px 85px;
-  flex-direction: column;
+    flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   flex-shrink: 0;
   background-color:#83B3D31F;
+
   }
-  .advantages-item-5 {
+  .advantages-item-6 {
     display: flex;
     width: 400px;
     height: 385px;
-    padding: 103px 85px;
-    flex-direction: column;
+      flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
     background-color:#82B3D3;
+
     }
+    .advantages-item-7 {
+      width: 800px;
+      height: 385px;
+      align-self: stretch;}
 .advantages{
   background: color #83b3d3 12%;
   font-family: PT Sans;
@@ -163,25 +215,65 @@ text-transform: uppercase;
 color: var(--texts-texts-basic, #000);
 text-align: center;
  }
-.services-title {
-font-family: PT Sans;
-font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: 36px; /* 120% */
-text-transform: uppercase;
-color: var(--texts-texts-basic, #000);
-text-align: center;
-}
-.services-p {
+ .services-title {
   font-family: PT Sans;
-font-size: 22px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; /* 118.182% */
-color: var(--texts-second, #333);
-text-align: center;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 120% */
+  text-transform: uppercase;
+  color: var(--texts-texts-basic, #000);
+  text-align: center;
+  }
+  .services-p {
+    font-family: PT Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 118.182% */
+  color: var(--texts-second, #333);
+  text-align: center;
 }
+
+.services-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.services-item1{display: flex;
+  width: 400px;
+  height: 385px;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  background: var(--background-second-1, rgba(131, 179, 211, 0.12));
+  }
+  .services-item2 {display: flex;
+    width: 400px;
+    height: 385px;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;}
+    .services-item3{
+      display: flex;
+      width: 400px;
+      height: 385px;
+
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      flex-shrink: 0;
+      background: var(--background-second-1, rgba(131, 179, 211, 0.12));
+    }
+    .bid1 {padding: 96px 304px;}
 .bid {font-family: PT Sans;
   font-size: 30px;
   font-style: normal;
@@ -190,6 +282,7 @@ text-align: center;
   text-transform: uppercase;
   color: var(--texts-texts-basic, #000);
   text-align: center;
+
 }
 .bid-item {
 font-family: PT Sans;
@@ -215,12 +308,18 @@ margin: 0 auto;
 display: block;;
 }
 /*Page-footer*/
-.index-footer{
+.subscribe {
   background-image: url("../images/index/fon subscription.jpg");
   background-size:100% auto;
   background-repeat: no-repeat;
+  width: 1200px;
+  height: 415px;
   color:#000;
   background-color: var(--basic-white, #FFF);
+  display: flex;
+flex-direction: column;
+  justify-content: center;
+  align-items: center;
   }
   .page-footer-title{
 font-family: PT Sans;
@@ -241,12 +340,14 @@ line-height: 26px; /* 118.182% */
 color: var(--texts-background-deafault, #FFF);
 text-align: center;
 }
+.subscribe-form { display: flex;
+
+ }
 .field{
 display: flex;
-padding: 12px 20px;
+width: 452px;
 align-items: center;
-gap: 260px;
-flex: 1 0 0;
+
 align-self: stretch;
 border-radius: 4px 0px 0px 4px;
 background: var(--basic-light, #F2F2F2);
@@ -267,13 +368,45 @@ text-transform: uppercase;
 color: var(--texts-background-deafault, #FFF);
 text-align: center;
 display: inline-flex;
-padding: 8px 50px;
+width: 232px;
 justify-content: center;
 align-items: center;
 gap: 10px;
 border-radius: 0px 4px 4px 0px;
 background:#82B3D3;
 }
+.contacts { display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;}
+  .seti {display: flex;
+  padding-left: 70px;}
+  .contacts-item1 {
+    display: flex;
+padding: 0px 10px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex: 1 0 0;
+align-self: stretch;
+  }
+  .contacts-item2 {display: flex;
+    padding: 1px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+    align-self: stretch;}
+    .contacts-item3{display: flex;
+      padding: 0px 10px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      flex: 1 0 0;
+      align-self: stretch;}
 .contacts-phone {
   font-family: PT Sans;
 font-size: 40px;
@@ -281,6 +414,19 @@ font-style: normal;
 font-weight: 400;
 line-height: 40px; /* 100% */
 text-transform: uppercase;
+text-decoration: none;
 color: var(--texts-texts-basic, #000);
 text-align: center;
+padding-left: 194px;
+padding-right: 194px;
+}
+.contacts-adress {}
+/*Catalog*/
+.filter {background-image: url("../images/catalog/filtr.png");
+  background-size:100% auto;
+  background-repeat: no-repeat;
+  color:  #000;
+  background-color: var(--basic-white, #FFF);
+  .filter1 {display:flex;
+
 }
