--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -28,13 +28,58 @@ body {
   }
   .navigation {   background: #fff;
     display: flex;
-  width: 760;
-margin:0 auto;}
+  width: 1200px;
+  height: 64px;
+  margin:0 auto;
 }
+
 .navigation-list {
   display: flex;
+  list-style-type: none;
+  height: 64px;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+ margin-left: 30px;
 
 }
+.navigation-item1{
+  padding-right: 16px;
+}
+.navigation-item2 {display: flex;
+  padding: 20px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+padding-left: 16px;
+padding-right: 16px;}
+.navigation-item3 {
+  padding-left: 16px;
+}
+.navigation-user {display: flex;
+  margin: 0 auto;
+list-style-type: none;
+align-items: center;}
+.navigation-link4 {padding-right: 25px;}
+.navigation-link5 {padding-right:20px ;}
+.navigation-link6 {font-family: PT Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 125% */
+  text-transform: uppercase;
+  color: #FFFFFF;
+  display: flex;
+  width: 160px;
+  padding: 8px 50px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--buttons-basic, #756157);
+  margin-right: 70px;}
 .navigation-link {
   font-family: "PT Sans"sans-serif;
   font-size: 20px;
@@ -64,6 +109,7 @@ width: 1200px;}
     background-repeat: no-repeat;
     color:  #000;
     background-color: var(--basic-white, #FFF);
+
 
 
   }
@@ -426,12 +472,67 @@ padding-right: 194px;
   background-size:100% auto;
   background-repeat: no-repeat;
   color:  #000;
-  background-color: var(--basic-white, #FFF);}
+  background-color: var(--basic-white, #FFF);
+  padding-left: 70px;
+padding-bottom: 70px;}
+  .title {font-family: PT Sans;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 78px; /* 130% */
+    color: var(--texts-background-deafault, #FFF);
+  padding-left: 70px;
+}
 .filter1 {display:flex;}
+.filter33 {border: none;}
+.sorting { display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+padding-top: 50px;
+padding-bottom: 40px;
+margin: 0 auto;
+width: 1060px;
+height: 49px;}
+.sorting1 {margin-right: auto;
+  font-family: PT Sans;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 120% */
+  text-transform: uppercase;
+  color: var(--texts-texts-basic, #000);
+}
+.sorting2  {
+  gap: 70px;
+  font-family: PT Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 116.667% */
+  color: var(--texts-second, #333);
+
+}
+
+.sorting3 {
+ margin-right: 8px;
+
+  }
+.select-control {
+  border-radius: 4px;
+  border: 2px solid var(--forms-elements-1, #E5E5E5);
+  position: relative;
+  outline: none;
+  padding: 14px ;
+  padding-right: 49px;}
+
+.layout {display: flex;
+  list-style-type: none;}
 .style-ul { list-style-type: none;}
 .hotel { display: flex;
 width: 1200px;
-flex-wrap: wrap;}
+flex-wrap: wrap;
+margin-left: 70px;}
 .hotel1 {width: 340px;
   height: 438px;
   padding: 20px;
