--- a/styles/styles.css
+++ b/styles/styles.css
@@ -403,6 +403,7 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 133.333% */
+border: none;
 }
 .newsletter-button {
 font-family: PT Sans;
@@ -420,6 +421,7 @@ align-items: center;
 gap: 10px;
 border-radius: 0px 4px 4px 0px;
 background:#82B3D3;
+border: none;
 }
 .contacts { display: flex;
   align-items: center;
@@ -569,5 +571,139 @@ margin-right: 20px;}
     border: 1px solid #E6E6E6;
     margin-top: 20px;
 }
-
-
+.pagination {display: flex;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  width: 1060px;
+  height: 60px;}
+  .pagination-item1 {font-family: PT Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 180% */
+    text-transform: uppercase;
+    color: var(--texts-texts-basic, #000);
+    text-align: center;
+    text-decoration:none;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: var(--forms-elements-2, #F2F2F2);
+    margin-right: 8px;}
+    .pagination-item2 {font-family: PT Sans;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 36px; /* 180% */
+      text-transform: uppercase;
+      color: var(--texts-background-deafault, #FFF);
+      text-align: center;
+      text-decoration:none;
+      display: flex;
+      width: 60px;
+      height: 60px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 4px;
+      background: var(--buttons-second, #82B3D3);
+      margin-right: 8px;}
+.pagination-item3 {font-family: PT Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 180% */
+  text-transform: uppercase;
+  color: var(--texts-background-deafault, #FFF);
+  text-align: center;
+  text-decoration:none;
+  display: flex;
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background: var(--buttons-second, #82B3D3);
+  margin-right: 8px;}
+  .pagination-item4 {font-family: PT Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 180% */
+    text-transform: uppercase;
+    color: var(--texts-background-deafault, #FFF);
+    text-align: center;
+    text-decoration:none;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: var(--buttons-second, #82B3D3);
+    margin-right: 8px;}
+    .pagination-item5 {font-family: PT Sans;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 36px; /* 180% */
+      text-transform: uppercase;
+      color: var(--texts-texts-basic, #000);
+      text-align: center;
+      text-decoration:none;
+      display: flex;
+      width: 60px;
+      height: 60px;
+      justify-content: center;
+      align-items: center;
+      margin-right: 8px;}
+    .pagination-item6 {font-family: PT Sans;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 36px; /* 180% */
+      text-transform: uppercase;
+      color: var(--texts-background-deafault, #FFF);
+      text-align: center;
+      text-decoration:none;
+      display: flex;
+      width: 60px;
+      height: 60px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 4px;
+      background: var(--buttons-second, #82B3D3);
+      margin-right: 8px;}
+      .page-footer-title2{font-family: PT Sans;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 36px; /* 120% */
+        text-transform: uppercase;
+        width: 404px;
+        height: 36.35px;
+        text-align: center;
+      margin-bottom: 20px;}
+        .page-footer-title3{font-family: PT Sans;
+          font-size: 22px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 26px; /* 118.182% */
+          color: var(--texts-second, #333);
+          text-align: center;
+   
+        margin-bottom: 54px;}
+.subscribe-catalog {background-size:100% auto;
+  background-repeat: no-repeat;
+  width: 1200px;
+  height: 415px;
+  color:#000;
+  background-color: var(--basic-white, #FFF);
+  display: flex;
+flex-direction: column;
+  justify-content: center;
+  align-items: center;}
